[tool.poetry]
name = "fixed-income-annuity"
version = "0.1.0"
description = ""
authors = ["pathikrit <pathikritbhowmick@msn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
python-dateutil = "^2.8.2"
streamlit = "^1.28.0"
numpy-financial = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
